--- a/_config.yml
+++ b/_config.yml
@@ -1,82 +1,7 @@
-# Configuración del sitio
-title: Open5GS Operator
-description: Documentación y tutoriales para desplegar y administrar Open5GS en Kubernetes
-baseurl: ""
-url: "https://open5gs.github.io"
-
-# Configuración de tema
-theme: minima
-remote_theme: jekyll/minima
-
-# Plugins
-plugins:
-  - jekyll-feed
-  - jekyll-seo-tag
-  - jekyll-sitemap
-  - jekyll-remote-theme
-
-# Estructura de enlaces
-permalink: pretty
-
-# Configuración de navegación
-header_pages:
-  - index.md
-  - tutorials.md
-  - about.md
-
-# Excluir archivos y carpetas
-exclude:
-  - Gemfile
-  - Gemfile.lock
-  - node_modules
-  - vendor/bundle/
-  - vendor/cache/
-  - vendor/gems/
-  - vendor/ruby/
-  - README.md
-  - LICENSE
-
-# Configuración de colecciones para mejor organización
-collections:
-  docs:
-    output: true
-    permalink: /:collection/:path/
-
-# Valores por defecto para archivos Markdown
-defaults:
-  -
-    scope:
-      path: ""
-      type: "docs"
-    values:
-      layout: "page"
-  -
-    scope:
-      path: ""
-      type: "posts"
-    values:
-      layout: "post"
-  -
-    scope:
-      path: ""
-    values:
-      layout: "default"
-
-# Configuración de Markdown
-markdown: kramdown
-highlighter: rouge
-kramdown:
-  input: GFM
-  syntax_highlighter: rouge
-  syntax_highlighter_opts:
-    css_class: 'highlight'
-    span:
-      line_numbers: false
-    block:
-      line_numbers: true
-      start_line: 1
-
-# Configuración de sintaxis resaltada
-rouge:
-  css_class: 'highlight'
-  style: github
+theme: jekyll-theme-slate
+baseurl: /5g-charts
+title: Gradiant 5G Charts
+description: A curated collection of 5G/6G related Helm Charts
+relative_links:
+  enabled:     true
+  collections: true
