--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
-title: "open5gs-go-operator-1"
-description: "Página de GitHub Pages para el repositorio open5gs-go-operator-1"
+title: "Gradiant Open5gs Operator"
+description: "Deploy and manage Open5GS on Kubernetes with the Open5GS Operator"
 theme: jekyll-theme-slate
-baseurl: /open5gs-go-operator-1
+baseurl: "/open5gs-go-operator-1"
 relative_links:
-  enabled:     true
+  enabled: true
   collections: true
 highlighter: rouge
 markdown: kramdown
